# json-querying-challenge

./: .gitignore  LICENSE  README.md  json-querying-challenge.cabal  research.md
app/: Main.hs
backend/: json-querying-challenge.cabal
backend/app/: Main.hs
backend/src/: QueryJSON.hs
frontend/: .env  package-lock.json  package.json
frontend/src/: app.html
frontend/src/routes/: +layout.svelte  +page.svelte
